# lvgl_osd

./: .gitignore  .gitmodules  CMakeLists.txt  README.MD  build_osd.sh
cmake/: sigmastar.cmake
lvgl_osd/: CMakeLists.txt
lvgl_osd/inc/: key.h  lv_menu_obj.h  lv_osd_indev.h  lv_osd_menu_init.h
lvgl_osd/src/: lv_conf.h  lv_drv_conf.h  lv_menu_obj.c  lv_osd_indev.c  lv_osd_menu_init.c  main.c
lvgl_osd/src/cb_output/: btn_cb_output.c  dropdown_cb_output.c  slider_cb_output.c  switch_cb_output.c
